--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
-  "button" : "Draw a random <1>{{name}}</1> Joke ",
-  "inputField" : "Impersonate Chuck Norris"
+  "inputField" : "Impersonate Chuck Norris",
+  "button" : {
+    "draw" : "Draw a random <1>{{name}}</1> Joke",
+    "save" : "Save Jokes"
+  }
 }
