--- a/src/i18n/locales/pl/translation.json
+++ b/src/i18n/locales/pl/translation.json
@@ -3,5 +3,9 @@
   "button": {
     "draw": "Wylosuj losowy żart o <1>{{name}}</1>",
     "save": "Zapisz żart"
+  },
+  "error": {
+    "input" : "Wybierz ilość pomiędzy 1 a 100",
+    "title" : "Ups! Coś poszło nie tak"
   }
 }
